--- a/src/2-aims/aim3.tex
+++ b/src/2-aims/aim3.tex
@@ -1,1 +1,3 @@
-The final aim of this proposal is to utilize the developed tools to run a kinematic study on 50 
+With the feasibility of an autonomous pipeline established, and single-plane limitations corrected, the final step is determining whether this pipeline is actually possible tto use in a clinical workflow.
+
+The final aim of this thesis hopes to test these capabilities on a pilot study measuring the kinematics of knee implants in a series of patients that have received total knee arthroplasty. Each patient will perform a series of tasks, and the time it takes to return a full kinematic evaluation will be reported, along with any areas that necessitated human supervision. The hypothesis of this aim is that the only areas that will require human supervision will be data-transfer to Joint Track Machine Learning, and post-processing in order to get useful results from the output kinematics. 
