Added some new touches on the model image registration section.

--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -4006,6 +4006,22 @@
   file = {/home/andrew/Zotero/storage/FYZ5ZDXC/Scott_Professional CMake.pdf}
 }
 
+@article{selvikRoentgenStereophotogrammetryMethod1989,
+  title = {Roentgen Stereophotogrammetry: {{A}} Method for the Study of the Kinematics of the Skeletal System},
+  shorttitle = {Roentgen Stereophotogrammetry},
+  author = {Selvik, G{\"O}Ran},
+  year = {1989},
+  month = jan,
+  journal = {Acta Orthopaedica Scandinavica},
+  volume = {60},
+  number = {sup232},
+  pages = {1--51},
+  issn = {0001-6470},
+  doi = {10.3109/17453678909154184},
+  langid = {english},
+  file = {/home/andrew/Zotero/storage/GGZWNXA9/Selvik - 1989 - Roentgen stereophotogrammetry A method for the st.pdf}
+}
+
 @article{sergeyevGlobalSearchBased2006,
   title = {Global {{Search Based}} on {{Efficient Diagonal Partitions}} and a {{Set}} of {{Lipschitz Constants}}},
   author = {Sergeyev, Yaroslav D. and Kvasov, Dmitri E. and Kvasov, Dmitri E.},
