--- a/src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex
+++ b/src/1-Intro/1-3_model-image-registration/1-3_model-image-registration.tex
@@ -40,3 +40,9 @@ One of the most effective methods for resolving single-camera limitations in mea
 The groups that have used this have cited sub-mm and sub-degree accuracy for all translations and rotations \cite{burtonAutomaticTrackingHealthy2021,youVivoMeasurement3D2001,bakaStatisticalShapeModelBased2012}, and have used a wide variety of optimization routines and image similarity metrics. 
 
 While this seems extremely promising, the general cost and unavailability of bi-plane fluoroscopic imaging systems presents a problem for integrating this technology into a clinical setting. If kinematic analysis is going to be have widespread clinical adoption, it \textbf{must} be integrating into the imaging systems present at most hospitals and clinics, which is single-plane systems. However, the accuracy of bi-plane systems can be used to validation of performance for various single-plane pipelines \cite{brobergValidationMachineLearning2023}.
+
+\subsection{Roentgen Stereophotogrammetric Analysis}
+
+Roentgen Stereophotogrammetry is one of the most accurate methods of measuring implant kinematics, popularized in the early 1970s \cite{selvikRoentgenStereophotogrammetryMethod1989}. Most often, it is used to determine implant micromotion in post-operative followups due to the extremely high resolution at which it measures pose and orientation. This method utilizes highly radio-opaque tantalum beads of known shape and size implanted on and adjacent to the implants. Utilizing similar methods to motion capture, algorithms can resolve the location of the tantalum beads extremely accurately, providing a good estimate for the location of the implant to which they are attached.
+
+The largest limitation of this method is two-fold (1) the need for additional surgical steps precludes this from being a widely applied method, and (2) the need for biplane imaging system poses a problem to availability and portability.
