Finished aim 3 and 4.

--- a/src/2-aims/aim3.tex
+++ b/src/2-aims/aim3.tex
@@ -1,3 +1,5 @@
 With the feasibility of an autonomous pipeline established, and single-plane limitations corrected, the final step is determining whether this pipeline is actually possible tto use in a clinical workflow.
 
-The final aim of this thesis hopes to test these capabilities on a pilot study measuring the kinematics of knee implants in a series of patients that have received total knee arthroplasty. Each patient will perform a series of tasks, and the time it takes to return a full kinematic evaluation will be reported, along with any areas that necessitated human supervision. The hypothesis of this aim is that the only areas that will require human supervision will be data-transfer to Joint Track Machine Learning, and post-processing in order to get useful results from the output kinematics. 
+The third aim of this thesis hopes to test these capabilities on a pilot study measuring the kinematics of knee implants in a series of patients that have received total knee arthroplasty. Each patient will perform a series of tasks, and the time it takes to return a full kinematic evaluation will be reported, along with any areas that necessitated human supervision. The hypothesis of this aim is that the only areas that will require human supervision will be data-transfer to Joint Track Machine Learning, and post-processing in order to get useful results from the output kinematics. We will also use a human supervised method of measuring TKA kinematics to determine the difference between kinematics and the difference in time to examination report.
+
+By establishing and benchmarking the difference in both time and levels of supervision required to generate a kinematic report, we hope to alleviate concerns over using this in the clinic.
