--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -9,6 +9,10 @@
 \label{sec:aim2}
 \input{src/2-aims/aim2.tex}
 
-\section{Aim 3: Clinical Application of Pipeline on XYZ Patients}
+\section{Aim 3: Pilot Trial of Application on Series of Patients}
 \label{sec:aim3}
 \input{src/2-aims/aim3.tex}
+
+\section{Aim 4: Standardizing Kinematic Examination Protocols Using Novel Machine Learning Methods}
+\label{sec:aim4}
+\input{src/2-aims/aim4.tex}
